# Enceladus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Enceladus.slnx  Enceladus.vcxproj  Enceladus.vcxproj.filters  config.ini  imgui.ini  main.cpp  vcpkg.json
.github/: copilot-instructions.md
Assets/: play_scene.json
Assets/map/: map.tmj  test.tmj
Core/: Engine.cpp  Engine.h
Core/Config/: AppSetting.cpp  AppSetting.h
Core/ECS/: CameraComponent.h  ColliderComponent.h  Component.h  ControllerComponent.h  Entity.h  MovementComponent.h  Registry.h  SpriteAnimationComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
Core/Managers/: SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h
Core/Math/: Vector2.h
Core/States/: IState.h  MainMenuState.cpp  MainMenuState.h  PlayState.cpp  PlayState.h
Core/Systems/: AnimationStateSystem.cpp  AnimationStateSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  ControllerSystem.cpp  ControllerSystem.h  InputSystem.cpp  InputSystem.h  MapConstraintSystem.cpp  MapConstraintSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SpriteAnimationSystem.cpp  SpriteAnimationSystem.h
Core/UI/: Button.cpp  Button.h  Menu.cpp  Menu.h
Core/Utility/: AnimationClip.h  AnimationUtils.cpp  AnimationUtils.h
Core/World/: SceneLoader.cpp  SceneLoader.h  TileMap.cpp  TileMap.h
